fix: alternative fix for message block body layout issues

--- a/src/components/message/styles.scss
+++ b/src/components/message/styles.scss
@@ -65,7 +65,7 @@
     font-size: 14px;
     line-height: 17px;
     color: theme.$color-greyscale-12;
-    display: inherit;
+    display: flex;
     flex-direction: column;
     gap: 4px;
 
